--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,12 @@
   </head>
 
   <body>
+ 
+      <% flash.each do |name, msg| %>
+        <ul>
+          <li> <%= msg %> </li>
+        </ul>
+      <% end %>
     <%= yield %>
   </body>
 </html>
